# NSTU

./: lab1.c  lab3.c  lab4.c  lab5.c  lab6.c  lab7.c  lab8.c  rgr2.c
semester2/: lab1.c  lab3.c  lab4.c  lab5.c  lab8.c  rgr1.c
semester3/arrayclass/: CMakeLists.txt  array.cpp  array.h  main.cpp  smartarray.cpp  smartarray.h  tests.cpp  tests.h
semester3/coursework/binary/: CMakeLists.txt  main.cpp
semester3/lab1/class/: CMakeLists.txt  array.cpp  array.h  class.h  main.cpp  tests.h
semester3/labs/arrayclass/: CMakeLists.txt  array.cpp  array.h  linkedlist.cpp  linkedlist.h  linkedlist_template.h  main.cpp  queuearray.cpp  queuearray.h  smartarray.cpp  smartarray.h  tests.cpp  tests.h
semester4/simulator/: Main.java  dependency-reduced-pom.xml  pom.xml  settings.txt
semester4/simulator/daiquiri/: pom.xml
semester4/simulator/daiquiri/src/main/java/com/example/daiquiri/: Simulation.java
semester4/simulator/daiquiri/src/main/resources/com/example/daiquiri/: habitat-console.fxml  habitat-view.fxml
semester4/simulator/simulator/src/main/java/: module-info.java
semester4/simulator/simulator/src/main/java/com/example/daiquiri/: Controller.java  Habitat.java  HabitatConsoleController.java  (+1 more)
semester4/simulator/src/main/java/: module-info.java
semester4/simulator/src/main/java/com/example/simulator/: Controller.java  Habitat.java  HabitatConsoleController.java  HabitatInfoController.java  Main.java  Simulation.java
semester4/simulator/src/main/resources/com/example/simulator/: habitat-console.fxml  habitat-info.fxml  habitat-view.fxml  hello-view.fxml
(+15 files in other folders)
